--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-uglify-es": "^2.0.0"
   },
   "dependencies": {
+    "fancybox": "^3.5.7",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "swiper": "^6.4.5"
