--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "gulp-uglify-es": "^2.0.0"
   },
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
+    "bootstrap": "^5.0.0-beta1",
     "fancybox": "^3.5.7",
-    "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "swiper": "^6.4.5"
   }
